--- a/ingress-gateway-edge.yml
+++ b/ingress-gateway-edge.yml
@@ -14,9 +14,9 @@ spec:
     tls:
       mode: MUTUAL
       credentialName: test-certs
-      sni: http-mtls.apps.cluster-6c24.6c24.example.opentlc.com
+      sni: http-mtls.apps.cluster-4314.4314.sandbox1764.opentlc.com
     hosts:
-    - http-mtls.apps.cluster-6c24.6c24.example.opentlc.com
+    - http-mtls.apps.cluster-4314.4314.sandbox1764.opentlc.com
 --- 
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -25,7 +25,7 @@ metadata:
   namespace: istio-system
 spec:
   hosts:
-  - http-mtls.apps.cluster-6c24.6c24.example.opentlc.com
+  - http-mtls.apps.cluster-4314.4314.sandbox1764.opentlc.com
   gateways:
   - gateway1
   http:
@@ -34,7 +34,7 @@ spec:
       - gateway1
       port: 443
       sniHosts:
-      - http-mtls.apps.cluster-6c24.6c24.example.opentlc.com
+      - http-mtls.apps.cluster-4314.4314.sandbox1764.opentlc.com
     route:
     - destination:
         host: http-mtls-git.fs-mesh-qa.svc.cluster.local
